NOT FINAL COLOR lol just messing around with the style.

--- a/www/index.html
+++ b/www/index.html
@@ -77,210 +77,153 @@
               <p>32 Members | 12 Groups | 7 Events</p>
             </div>
             <div class="right">
-              <a class="link icon-only">
+              <a href="/profile-screen/" class="link icon-only">
                 <i class="material-icons icon white">person</i>
               </a>
             </div>
           </div>
         </div>
-
-        <div class="toolbar tabbar toolbar-bottom">
-          <div class="toolbar-inner">
-            <a href="#tab-1" class="tab-link tab-link-active">
-              <i class="icon material-icons">home<span class="badge color-red">5</span></i>
-            </a>
-            <a href="#tab-2" class="tab-link">
-              <i class="icon material-icons">person</i>
-            </a>
+        <div class="page-content" style="overflow-x: hidden">
+          <h2 style="margin-left:16px; margin-bottom:0">Upcoming Events</h2>
+          <div data-space-between="0" data-slides-per-view="auto" class="swiper-container swiper-init event-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="slide-content">
+                  <h4 class="slide-title">Bob Ross Club</h4>
+                  <p>Every Wednesday</p>
+                  <p>7:30-9</p>
+                  <p>Art Room</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-content">
+                  <h4 class="slide-title">Nature Painting</h4>
+                  <p> S M T W T F S</p>
+                  <p>7:30-9:00</p>
+                  <p>Cafeteria</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-content">
+                  <h4 class="slide-title">Ross Club</h4>
+                  <p>Every Wednesday</p>
+                  <p>7:30-9</p>
+                  <p>Cafeteria</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-content">
+                  <h4 class="slide-title">Ross Club</h4>
+                  <p>Every Wednesday</p>
+                  <p>7:30-9</p>
+                  <p>Cafeteria</p>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="tabs-swipeable-wrap">
-          <div class="tabs">
-            <!-- First tab, active -->
-            <div class="page-content tab tab-active" id="tab-1" style="overflow-x: hidden">
-              <h2 style="margin-left:16px; margin-bottom:0">Upcoming Events</h2>
-              <div data-space-between="0" data-slides-per-view="auto" class="swiper-container swiper-init event-swiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <div class="slide-content">
-                      <h4 class="slide-title">Bob Ross Club</h4>
-                      <p>Every Wednesday</p>
-                      <p>7:30-9</p>
-                      <p>Art Room</p>
+          <div class="hairline"></div>
+          <h2 style="margin-bottom: 0; margin-left: 16px;">Subscribed Chats</h2>
+
+          <div class="list media-list no-margin-bottom no-hairlines no-hairlines-between no-margin-top">
+            <ul>
+              <li>
+                <a href="#" class="item-link item-content no-chevron">
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">Group Chat 1</div>
+                      <div class="item-after">12:14</div>
                     </div>
+                    <div class="item-text"><b>Jaden Smith: </b>Are we on for Monday night?</div>
                   </div>
-                  <div class="swiper-slide">
-                    <div class="slide-content">
-                      <h4 class="slide-title">Nature Painting</h4>
-                      <p> S M T W T F S</p>
-                      <p>7:30-9:00</p>
-                      <p>Cafeteria</p>
+                </a>
+              </li>
+              <li>
+                <a href="/chat-screen/" class="item-link item-content no-chevron">
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">Group Chat 2</div>
+                      <div class="item-after">10:11</div>
                     </div>
+                    <div class="item-text"><b>Krombopulos Mike: </b>Here I go killing again!</div>
                   </div>
-                  <div class="swiper-slide">
-                    <div class="slide-content">
-                      <h4 class="slide-title">Ross Club</h4>
-                      <p>Every Wednesday</p>
-                      <p>7:30-9</p>
-                      <p>Cafeteria</p>
-                    </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="hairline"></div>
+          <h2 style="margin-bottom: 0; margin-left: 16px;">Unsubscribed Chats</h2>
+
+          <div id="school-group-chats-skeleton" class="list media-list skeleton-text no-hairlines no-hairlines-between">
+            <ul>
+              <li class="item-content skeleton-effect-pulse">
+                <div class="item-media">
+                  <div class="skeleton-block" style="width: 40px; height: 40px; border-radius: 50%"></div>
+                </div>
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">This is Title</div>
                   </div>
-                  <div class="swiper-slide">
-                    <div class="slide-content">
-                      <h4 class="slide-title">Ross Club</h4>
-                      <p>Every Wednesday</p>
-                      <p>7:30-9</p>
-                      <p>Cafeteria</p>
-                    </div>
+                  <div class="item-subtitle">Subtitle</div>
+                  <div class="item-text">
+                    Placeholder text line 1 Text line 2
                   </div>
                 </div>
-              </div>
-              <div class="hairline"></div>
-              <h2 style="margin-bottom: 0; margin-left: 16px;">Subscribed Chats</h2>
-
-              <div class="list media-list no-margin-bottom no-hairlines no-hairlines-between no-margin-top">
-                <ul>
-                  <li>
-                    <a href="#" class="item-link item-content no-chevron">
-                      <div class="item-inner">
-                        <div class="item-title-row">
-                          <div class="item-title">Group Chat 1</div>
-                          <div class="item-after">12:14</div>
-                        </div>
-                        <div class="item-text"><b>Jaden Smith: </b>Are we on for Monday night?</div>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="/chat-screen/" class="item-link item-content no-chevron">
-                      <div class="item-inner">
-                        <div class="item-title-row">
-                          <div class="item-title">Group Chat 2</div>
-                          <div class="item-after">10:11</div>
-                        </div>
-                        <div class="item-text"><b>Krombopulos Mike: </b>Here I go killing again!</div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="hairline"></div>
-              <h2 style="margin-bottom: 0; margin-left: 16px;">Unsubscribed Chats</h2>
-
-              <div id="school-group-chats-skeleton" class="list media-list skeleton-text no-hairlines no-hairlines-between">
-                <ul>
-                  <li class="item-content skeleton-effect-pulse">
-                    <div class="item-media">
-                      <div class="skeleton-block" style="width: 40px; height: 40px; border-radius: 50%"></div>
-                    </div>
-                    <div class="item-inner">
-                      <div class="item-title-row">
-                        <div class="item-title">This is Title</div>
-                      </div>
-                      <div class="item-subtitle">Subtitle</div>
-                      <div class="item-text">
-                        Placeholder text line 1 Text line 2
-                      </div>
-                    </div>
-                  </li>
-                  <li class="item-content skeleton-effect-pulse">
-                    <div class="item-media">
-                      <div class="skeleton-block" style="width: 40px; height: 40px; border-radius: 50%"></div>
-                    </div>
-                    <div class="item-inner">
-                      <div class="item-title-row">
-                        <div class="item-title">This is Title</div>
-                      </div>
-                      <div class="item-subtitle">Subtitle</div>
-                      <div class="item-text">
-                        Placeholder text line 1 Text
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-              <div class="list media-list chevron-center no-margin-bottom no-hairlines no-hairlines-between">
-                <ul class="school-group-chats" id="school-group-chats">
-
-                </ul>
-              </div>
-              <div class="hairline">
-
-              </div>
-              <h2 style="margin-bottom: 0; margin-left: 16px;">School Members</h2>
-
-              <div class="searchbar searchbar-inline">
-                <div class="searchbar-input-wrap row">
-                  <input class="no-padding" type="search" placeholder="Search List">
-                  <span class="input-clear-button"></span>
+              </li>
+              <li class="item-content skeleton-effect-pulse">
+                <div class="item-media">
+                  <div class="skeleton-block" style="width: 40px; height: 40px; border-radius: 50%"></div>
                 </div>
-              </div>
-              <div class="list members-list searchbar-found no-hairlines no-hairlines-between no-margin-top">
-                <ul>
-                  <a href="#" class="item-link no-chevron">
-                    <li class="item-content">
-                      <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
-                      <div class="item-inner">Krombopulos Mike</div>
-                    </li>
-                  </a>
-                  <a href="#" class="item-link no-chevron">
-                    <li class="item-content">
-                      <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
-                      <div class="item-inner">Jane Smith</div>
-                    </li>
-                  </a>
-
-                </ul>
-              </div>
-              <!-- Nothing found message -->
-              <div class="block searchbar-not-found">
-                <div class="block-inner">Nothing found</div>
-              </div>
-
-            </div>
-            <!-- Second tab -->
-            <div class="page-content tab" id="tab-2">
-              <div class="profile-bg">
-                <div style="height: 150px">
-                  <div class="float-right" style="padding: 16px">
-                    <a onclick="editUser()" class="link">
-                      <i class="material-icons white">edit</i>
-                    </a>
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">This is Title</div>
+                  </div>
+                  <div class="item-subtitle">Subtitle</div>
+                  <div class="item-text">
+                    Placeholder text line 1 Text
                   </div>
                 </div>
-                <img src="media/profile-bump.png" class="profile-bump" />
-                <div class="profile-pic"></div>
-              </div>
-              <div class="block no-margin-top">
-                <div class="text-align-center no-margin-top">
-                  <h2 class="profile-title">Bob Rosspool</h2>
+              </li>
+            </ul>
+          </div>
+          <div class="list media-list chevron-center no-margin-bottom no-margin-top no-hairlines no-hairlines-between">
+            <ul class="school-group-chats" id="school-group-chats">
 
-                  <p class="no-margin-top">Attends <a class="link">School Of Ross</a></p>
-                </div>
-
-              </div>
-              <div class="list no-hairlines">
-                <div class="block-title" style="margin-left: 16px">Friends</div>
-                <ul>
-                  <a href="#" class="item-link no-chevron">
-                    <li class="item-content">
-                      <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
-                      <div class="item-inner">Krombopulos Mike</div>
-                    </li>
-                  </a>
-                  <a href="#" class="item-link no-chevron">
-                    <li class="item-content">
-                      <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
-                      <div class="item-inner">Jane Smith</div>
-                    </li>
-                  </a>
-
-                </ul>
-              </div>
-
-            </div>
+            </ul>
+          </div>
+          <div class="hairline">
 
           </div>
+          <h2 style="margin-bottom: 0; margin-left: 16px;">School Members</h2>
+
+          <div class="searchbar searchbar-inline">
+            <div class="searchbar-input-wrap row">
+              <input class="no-padding" type="search" placeholder="Search List">
+              <span class="input-clear-button"></span>
+            </div>
+          </div>
+          <div class="list members-list searchbar-found no-hairlines no-hairlines-between no-margin-top">
+            <ul>
+              <a href="#" class="item-link no-chevron">
+                <li class="item-content">
+                  <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
+                  <div class="item-inner">Krombopulos Mike</div>
+                </li>
+              </a>
+              <a href="#" class="item-link no-chevron">
+                <li class="item-content">
+                  <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
+                  <div class="item-inner">Jane Smith</div>
+                </li>
+              </a>
+
+            </ul>
+          </div>
+          <!-- Nothing found message -->
+          <div class="block searchbar-not-found">
+            <div class="block-inner">Nothing found</div>
+          </div>
+
+
         </div>
       </div>
     </div>
@@ -312,6 +255,8 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+    //firebase.auth().signInWithEmailAndPassword("ethandisilvestro@gmail.com", "123456").catch(function(error) {});
+
     var db = firebase.firestore();
     var User;
     firebase.auth().onAuthStateChanged(function(user) {
@@ -329,9 +274,14 @@
 
         loadSchoolChats();
         loadSubscribedChats();
-        //self.app.views.main.router.navigate('/home/', {
-        //  reloadCurrent: true
-        //});
+
+        //close the login screen if it is open
+        var currentPage = app.views.main.router.url;
+        if (currentPage == "/login-screen/") {
+          self.app.views.main.router.navigate('/home/', {
+            reloadCurrent: true
+          });
+        }
         app.preloader.hide();
         // ...
       } else {
@@ -382,6 +332,8 @@
         console.log("Failed to login: " + error.message);
         err.innerHTML = "Error: " + error.message;
       });
+
+      console.log(app.views.main.router.url);
     }
 
     function signOut() {
@@ -406,17 +358,18 @@
               <div class="item-title-row">\
                 <div class="item-title">' + doc.get("name") + '</div>\
               </div>\
-              <div class="item-subtitle">' + doc.get("numberOfMembers") + '</div>\
+              <div class="item-subtitle">' + doc.get("numberOfMembers") + ' Members</div>\
               <div class="item-text">' + doc.get("description") + '</div>\
             </div>\
           </a>';
             ls.appendChild(li);
 
-            var skeleton = document.getElementById('school-group-chats-skeleton');
-            skeleton.remove();
 
             //if any of these dont exist in the database they return null or undefined
           });
+          var skeleton = document.getElementById('school-group-chats-skeleton');
+          skeleton.parentNode.removeChild(skeleton);
+
         });
       });
     }
