--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -1,6 +1,11 @@
 <div class="page" data-page="profile">
   <div class="profile-bg">
     <div style="height: 150px">
+      <div class="float-left" style="padding: 16px">
+        <a class="link back">
+          <i class="material-icons" style="color: white; font-size: 20pt">arrow_back</i>
+        </a>
+      </div>
       <div class="float-right" style="padding: 16px">
         <a onclick="editUser()" class="link">
           <i class="material-icons" style="color: white; font-size: 20pt">edit</i>
