Added Settings and edit profile page

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
               <div class="item-inner">Change School</div>
             </li>
           </a>
-          <a href="#" class="panel-close item-link no-chevron">
+          <a href="/settings-screen/" class="panel-close item-link no-chevron">
             <li class="item-content">
               <div class="item-media"><i class="material-icons gradient-icon">settings</i></div>
               <div class="item-inner">Settings</div>
@@ -65,11 +65,11 @@
     <div class="view view-main" data-url="/">
       <div data-page="index" class="page">
 
-        <div class="navbar gradient-background no-shadow no-harline">
+        <div class="navbar no-shadow no-harline">
           <div class="navbar-inner school-header">
             <div class="left">
               <a class="panel-open link icon-only">
-                <i class="material-icons icon white">menu</i>
+                <i class="material-icons icon">menu</i>
               </a>
             </div>
             <div class="title">
@@ -78,7 +78,7 @@
             </div>
             <div class="right">
               <a href="/profile-screen/" class="link icon-only">
-                <i class="material-icons icon white">person</i>
+                <i class="material-icons icon">person</i>
               </a>
             </div>
           </div>
