--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -7,7 +7,7 @@
         </a>
       </div>
       <div class="float-right" style="padding: 16px">
-        <a onclick="editUser()" class="link">
+        <a href="/edit-profile-screen/" class="link">
           <i class="material-icons" style="color: white; font-size: 20pt">edit</i>
         </a>
       </div>
