--- a/www/pages/settings.html
+++ b/www/pages/settings.html
@@ -49,6 +49,17 @@
           </li>
         </ul>
       </div>
+      <div class="block-title">Language</div>
+      <div class="hairline"></div>
+      <div class="list no-hairlines no-margin-top">
+        <ul>
+          <a href="/edit-profile-screen/" class="item-link">
+            <li class="item-content">
+              <div class="item-inner">Change Language</div>
+            </li>
+          </a>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
