--- a/www/index.html
+++ b/www/index.html
@@ -84,76 +84,51 @@
           </div>
         </div>
         <div class="page-content" style="overflow-x: hidden; background-color: #edeff2">
-          <div class="title">Upcoming Events</div>
-          <div class="hairline"></div>
-          <div data-space-between="0" data-slides-per-view="1" class="swiper-container swiper-init event-swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="slide-content">
-                  <div class="row">
-                    <div class="col">
-                      <h4 class="slide-title">Bob Ross Club</h4>
-                      <p>Every Wednesday</p>
-                      <p>7:30-9</p>
-                      <p>Art Room</p>
-                    </div>
-                    <div class="col slide-content-image"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="slide-content">
-                  <h4 class="slide-title">Nature Painting</h4>
-                  <p> S M T W T F S</p>
-                  <p>7:30-9:00</p>
-                  <p>Cafeteria</p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="slide-content">
-                  <h4 class="slide-title">Ross Club</h4>
-                  <p>Every Wednesday</p>
-                  <p>7:30-9</p>
-                  <p>Cafeteria</p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="slide-content">
-                  <h4 class="slide-title">Ross Club</h4>
-                  <p>Every Wednesday</p>
-                  <p>7:30-9</p>
-                  <p>Cafeteria</p>
-                </div>
-              </div>
+          <div class="row title justify-items-left">
+            <div>Upcoming Events</div>
+            <div class="left">
+              <i onclick="swipeLeft()" class="material-icons">keyboard_arrow_left</i>
+              <i onclick="swipeRight()" class="material-icons">keyboard_arrow_right</i>
             </div>
           </div>
-          <div class="card-block">
+          <div id="event-swiper-wrapper" data-space-between="0" data-slides-per-view="1" class="swiper-container event-swiper">
+            <div id="event-swiper" class="swiper-wrapper">
+
+
+            </div>
+          </div>
+          <div class="card-block no-margin-top">
             <div class="title">Subscribed Chats</div>
             <div class="hairline"></div>
-            <div class="list media-list no-margin-bottom no-hairlines no-hairlines-between no-margin-top">
+
+            <div id="subscribed-chats-skeleton" class="list media-list skeleton-text no-hairlines no-hairlines-between no-margin">
               <ul>
-                <li>
-                  <a href="#" class="item-link item-content no-chevron">
-                    <div class="item-inner">
-                      <div class="item-title-row">
-                        <div class="item-title">Group Chat 1</div>
-                        <div class="item-after">12:14</div>
-                      </div>
-                      <div class="item-text"><b>Jaden Smith: </b>Are we on for Monday night?</div>
+                <li class="item-content skeleton-effect-pulse">
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">This is Title</div>
                     </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="/chat-screen/" class="item-link item-content no-chevron">
-                    <div class="item-inner">
-                      <div class="item-title-row">
-                        <div class="item-title">Group Chat 2</div>
-                        <div class="item-after">10:11</div>
-                      </div>
-                      <div class="item-text"><b>Krombopulos Mike: </b>Here I go killing again!</div>
+                    <div class="item-text">
+                      Placeholder text line 1 Text line 2
                     </div>
-                  </a>
+                  </div>
                 </li>
+                <li class="item-content skeleton-effect-pulse">
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">This is Title</div>
+                    </div>
+                    <div class="item-text">
+                      Placeholder text line 1 Text
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+
+            <div class="list media-list no-margin-bottom no-hairlines no-hairlines-between no-margin-top">
+              <ul id="subscribed-chats">
+
               </ul>
             </div>
           </div>
@@ -198,7 +173,7 @@
 
               </ul>
             </div>
-            <div class="row justify-content-center"><a class="link"><i class="material-icons">keyboard_arrow_down</i></a></div>
+            <div class="row justify-content-center"><a class="link"><i class="material-icons">expand_more</i></a></div>
           </div>
           <div class="card-block">
             <div class="title">School Members</div>
@@ -387,15 +362,28 @@
     function loadSubscribedChats() {
       db.collection("users").doc(User.uid).collection("chats").get().then(function(querySnapshot) {
         querySnapshot.forEach(function(doc) {
-          //this loop runs once for every chat room the current user is subbscribed to
 
+          //this loop runs once for every chat room the current user is subscribed to
           db.collection("school").doc(doc.get("school") + "").collection("chats").doc(doc.id).get().then(function(chat) {
-            console.log(doc.id);
-            console.log(chat.get("name"));
+            var ls = document.getElementById("subscribed-chats");
+            var li = document.createElement('li');
+            li.innerHTML = '<a onclick="(loadChat(\'' + doc.id + '\'))" class="item-link item-content no-chevron">\
+              <div class="item-inner">\
+                <div class="item-title-row">\
+                  <div class="item-title">' + chat.get("name") + '</div>\
+                  <div class="item-after">12:14</div>\
+                </div>\
+                <div class="item-text"><b>Jaden Smith: </b>Are we on for Monday night?</div>\
+              </div>\
+            </a>';
+            ls.appendChild(li);
+
             //if any of these dont exist in the database they return null or undefined
           });
         });
       });
+      var skeleton = document.getElementById('subscribed-chats-skeleton');
+      skeleton.parentNode.removeChild(skeleton);
     }
 
     //managing user data (subscribing and unsubscribing from chats and stuff like that)
@@ -417,6 +405,67 @@
       });;
     }
 
+    function loadChat(chatID) {
+      self.app.views.main.router.navigate('/chat-screen/');
+      console.log(app.views.main.router.url);
+      document.getElementById("group-name").innerinnerHTML = "GROUP NAME";
+
+    }
+
+    function previewChat(chatID) {
+      self.app.views.main.router.navigate('/preview-chat-screen/');
+    }
+    addEvent('Bob Ross Club', 'https://img1.grunge.com/img/gallery/what-you-didnt-know-about-the-life-of-bob-ross/intro-1523462862.jpg', 'Thursday', '7:30-9', 'Art Room', 'Come watch bob ross with us!', '');
+    addEvent('Ugly Face Day', 'https://cdn.mos.cms.futurecdn.net/Rmtq8KDLagPDutJTp5ZViE.jpg', 'Friday', '4:20', 'Oblivion', 'why do these faces even exist?', '');
+
+    function addEvent(name, image, day, time, location, description, guests) {
+      app.swiper.destroy('.swiper-container');
+
+      var swiper = document.getElementById('event-swiper');
+      var event = document.createElement('div');
+      event.classList.add("swiper-slide");
+      event.innerHTML = '<div class="slide-content">\
+        <div class="row" style="margin-bottom: 0">\
+          <div class="col-33">\
+            <div class="slide-image" style="background-image: url(' + image + ');"></div>\
+          </div>\
+          <div class="col-66">\
+            <div class="slide-text">\
+              <h4 class="slide-title">' + name + '</h4>\
+              <p>' + day + '</p>\
+              <p>' + time + ' | ' + location + '</p>\
+            </div>\
+          </div>\
+        </div>\
+        <div class="collapsible">\
+          <div class="collapsible-content">' + description + '</div>\
+          <div style="background-color: white">\
+            <div class="hairline"></div>\
+          </div>\
+        </div>\
+        <div class=" row slide-guests">\
+          <div class="row left" style="display:flex;justify-content: center;align-items: center;">\
+            <div class="col img" style="background-image: url(https://cdn.mos.cms.futurecdn.net/Rmtq8KDLagPDutJTp5ZViE.jpg)"></div>\
+            <div class="col img" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyMQl7f1VtadBUijAqRzqzM0KG0cYEoA5aXeqLmuzUQUJENZHN5A)"></div>\
+            <p>+3 more</p>\
+          </div>\
+          <div class="right"><a class="link collapsible-toggle"><i class="material-icons">expand_more</i></a></div>\
+        </div>\
+      </div>';
+
+      swiper.appendChild(event);
+      app.swiper.create('.swiper-container');
+
+      var collToggle = document.getElementsByClassName("collapsible-toggle");
+
+      collToggle[collToggle.length - 1].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var coll = this.parentElement.parentElement.previousElementSibling;
+        coll.classList.toggle("expanded");
+      });
+      updateSwiper();
+
+    }
 
     function addMessage() {
       db.collection("messages").add({
