--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -23,7 +23,7 @@
   </div>
   <div class="navbar">
     <div class="navbar-inner">
-      <div class="left"><a href="#" class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
+      <div class="left"><a class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
       <div id="group-name" class="title">Chat Group Name</div>
       <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">more_vert</i></a></div>
     </div>
